--- a/Event/Informasi-event-page/index.html
+++ b/Event/Informasi-event-page/index.html
@@ -38,14 +38,15 @@
     </nav>
 
 
-
+    <img href="" src="foto/back.png" alt="icon-send" id="icon-back"/>
     <div class="informasi-event">
         <img src="foto/sertifikasi1.png" alt="sertifikasi1" id="sertifikasi1"/>
         <p>Pelatihan Online Digital Marketing selama 6 hari BONUS Inkubasi 1 bulan penuh dengan 75% praktek. 
             Materinya siap pakai dan bisa segera mendapatkan pelanggan. Pelatihan termasuk bimbingan teknis 
             dan uji kompetensi untuk mendapatkan sertifikasi BNSP dari negara.
         </p>
-        <button type="button" id="informasi-event-button">Selengkapnya</button>
+        <a href="https://www.loket.com/event/kelas-malam-digital-marketing-pelatihan-sertifikasi-profesi-durd">
+          <button type="button" id="informasi-event-button">Selengkapnya</button></a>
     </div>
 
 
