--- a/Event/Event-page/index.html
+++ b/Event/Event-page/index.html
@@ -39,8 +39,11 @@
     </nav>
 
 
+    <div class="posisi-iklan">
+      <img src="foto/iklan.png" alt="iklan" id="iklan"/>
+    </div>
+
     <div class="event">
-        <img src="foto/iklan.png" alt="iklan" id="iklan"/>
         <h2>Sertifikasi</h2>
         <div class="sertifikasi">
             <img src="foto/sertifikasi1.png" alt="sertifikasi1" id="sertifikasi1"/>
