--- a/ChatbotAI/chatbot-AI/index.html
+++ b/ChatbotAI/chatbot-AI/index.html
@@ -39,21 +39,30 @@
 
 
     
+
     
-      <img src="foto/back.png" alt="icon-send" id="icon-back"/>
+    <img src="foto/back.png" alt="icon-send" id="icon-back"/>
+    <div class="posisi-tengah">
       <div class="room-chatbot">
           <div class="nama-room">
               <h3>Owlearn Bot</h3>
           </div>
-          <div class="chatting">
-              <p id="pesan-chatbot">Halo, Ada yang bisa saya bantu?</p>
-              <p id="pesan-user">Tolong saya bingung materi ini...</p>
-          </div>
-          <div class="tempat-ketik">
-              <input type="text" id="tulisan" placeholder="Ketik Disini">
-              <img src="foto/send.png" alt="icon-send"/>
+          <div class="atur-chat">
+            <div class="chatting">
+              <div class="box-chat">
+                <p id="pesan-chatbot">Halo, Ada yang bisa saya bantu?</p>
+                <p id="pesan-user">Tolong saya bingung materi ini...</p>
+              </div>
+            </div>
+            <div class="tempat-ketik">
+                <input type="text" id="tulisan" placeholder="Ketik Disini">
+                <img src="foto/send.png" alt="icon-send" id="icon-send"/>
+            </div>
           </div>
       </div>
+    </div>
+
+
 
 
 
