--- a/index.html
+++ b/index.html
@@ -20,20 +20,21 @@
   </head>
   <body>
     <nav class="navbar">
-      <a href="#home" class="navbar-logo">OWLEARN</a>
+      <a href="index.html" class="navbar-logo">OWLEARN</a>
       <div class="navbar-nav">
-        <a href="#home">HOME</a>
-        <a href="#learning">LEARNING</a>
+        <a href="index.html">HOME</a>
+        <a href="learning.html">LEARNING</a>
         <a href="#event">EVENT</a>
         <a href="#about">ABOUT US</a>
       </div>
       <div class="navbar-extra">
-        <a href="#" id="search"><i class="search" data-feather="search"></i></a>
-        <a href="#" id="cart"
+        <a href="#" aria-label="search" id="search"><i class="search" data-feather="search"></i></a>
+        <a href="#" aria-label="cart" id="cart"
           ><i class="cart" data-feather="shopping-cart"></i
         ></a>
-        <a href="#" id="profile"><i class="profile" data-feather="user"></i></a>
-        <a href="#" id="menu"><i class="menu" data-feather="menu"></i></a>
+        <a href="#" aria-label="profile" id="profile"><i class="profile" data-feather="user"></i></a>
+        <a href="#" aria-label="menu" id="menu"><i class="menu" data-feather="menu"></i></a>
+      </div>
       </div>
     </nav>
 
@@ -116,7 +117,7 @@
             placeholder="Zip Code"
             required
           />
-          <input class="status" id="status" type="checkbox" />
+          <input aria-label="status" class="status" id="status" type="checkbox" />
           <label id="check" for=""
             >Dengan ini saya menyatakan data yang diisi pada form ini adalah
             benar dan telah sesuai</label
@@ -169,16 +170,16 @@
     <footer>
       <footer>
         <div class="socials">
-          <a href="https://www.instagram.com/abianramzy/"
+          <a href="https://www.instagram.com/abianramzy/" aria-label="instagram"
             ><i data-feather="instagram"></i
           ></a>
-          <a href="https://twitter.com/VVijaya_"
+          <a href="https://twitter.com/VVijaya_" aria-label="twitter"
             ><i data-feather="twitter"></i
           ></a>
-          <a href="https://www.linkedin.com/in/abian-ramzy-wijaya-b04a93181/"
+          <a href="https://www.linkedin.com/in/abian-ramzy-wijaya-b04a93181/" aria-label="linkedin"
             ><i data-feather="linkedin"></i
           ></a>
-          <a href="https://www.youtube.com/@abianramzyYT"
+          <a href="https://www.youtube.com/@abianramzyYT" aria-label="youtube"
             ><i data-feather="youtube"></i
           ></a>
         </div>
@@ -193,6 +194,6 @@
       feather.replace();
     </script>
 
-    <script src="js/script.js"></script>
+    <script src="js/script-learning.js"></script>
   </body>
 </html>
