--- a/Profil/Profil/index.html
+++ b/Profil/Profil/index.html
@@ -53,16 +53,16 @@
               <input type="text" id="asal-sekolah" disabled> <br>
 
             <label>Gmail</label> <br>
-              <input type="text" id="gmail" disabled> <br>
+              <input type="email" id="gmail" disabled> <br>
 
             <label>No Hp</label> <br>
-              <input type="text" id="no-hp" disabled> <br>
+              <input type="number" id="no-hp" disabled> <br>
 
             <label>Password</label> <br>
               <input type="text" id="pass" disabled> <br>
           </div>
-              <button type="button" id="button-edit" onclick="editProfile()">Edit</button>
-              <button type="button" id="button-submit" style="display: none;" onclick="submitProfile()">Submit</button>
+              <button type="button" id="button-edit" onclick="editProfil()">Edit</button>
+              <button type="button" id="button-submit" style="display: none;" onclick="submitProfil()">Submit</button>
         </div>
       </div>
         
