--- a/Event/Informasi-event-page/sertifikasi3/index.html
+++ b/Event/Informasi-event-page/sertifikasi3/index.html
@@ -15,10 +15,9 @@
     />
 
     <script src="https://unpkg.com/feather-icons"></script>
+
     <link rel="stylesheet" href="style.css"/>
   </head>
-
-
   <body>
     <nav class="navbar">
       <a href="#home" class="navbar-logo">OWLEARN</a>
@@ -39,32 +38,13 @@
     </nav>
 
 
-    <div class="posisi-iklan">
-      <a href="https://iklanqu.com/page/whats-on"><img src="foto/iklan.png" alt="iklan" id="iklan"/></a>
-    </div>
 
-    <div class="event">
-        <h2>Sertifikasi</h2>
-        <div class="sertifikasi">
-            <a href="../Informasi-event-page/#sertifikasi1"><img src="foto/sertifikasi1.png" alt="sertifikasi1" id="sertifikasi1"/></a>
-            <a href="../Informasi-event-page/#sertifikasi1"><img src="foto/sertifikasi2.png" alt="sertifikasi2" id="sertifikasi2"/></a>
-            <a href="../Informasi-event-page/#sertifikasi1"><img src="foto/sertifikasi3.png" alt="sertifikasi3" id="sertifikasi3"/></a>
-            <a href="../Informasi-event-page/#sertifikasi1"><img src="foto/sertifikasi4.png" alt="sertifikasi4" id="sertifikasi4"/></a>
-        </div>
-        <!-- <h2>Webinar</h2>
-        <div class="webinar">
-            <a href="../Informasi-event-page/#sertifikasi1"><img src="foto/webinar1.png" alt="webinar1" id="webinar1"/></a>
-            <a href="../Informasi-event-page/#sertifikasi1"><img src="foto/webinar2.png" alt="webinar2" id="webinar2"/></a>
-            <a href="../Informasi-event-page/#sertifikasi1"><img src="foto/webinar3.png" alt="webinar3" id="webinar3"/></a>
-            <a href="../Informasi-event-page/#sertifikasi1"><img src="foto/webinar4.png" alt="webinar4" id="webinar4"/></a>
-        </div>
-        <h2>Seminar</h2>
-        <div class="seminar">
-            <a href="../Informasi-event-page/#sertifikasi1"><img src="foto/seminar1.png" alt="seminar1" id="seminar1"/></a>
-            <a href="../Informasi-event-page/#sertifikasi1"><img src="foto/seminar2.png" alt="seminar2" id="seminar2"/></a>
-            <a href="../Informasi-event-page/#sertifikasi1"><img src="foto/seminar3.png" alt="seminar3" id="seminar3"/></a>
-            <a href="../Informasi-event-page/#sertifikasi1"><img src="foto/seminar4.png" alt="seminar4" id="seminar4"/></a>
-        </div> -->
+    <a href="../../Event-page/index.html"><img src="../foto/back.png" alt="icon-send" id="icon-back"/></a>
+    <div class="informasi-event">
+        <img src="../foto/sertifikasi3.png" alt="sertifikasi3" id="sertifikasi3"/>
+        <p id="desSertifikasi3"></p>
+        <a href="https://www.loket.com/event/kelas-siang-pelatihan-sertifikasi-profesi-content-creator-du2d">
+          <button type="button" id="informasi-event-button">Selengkapnya</button></a>
     </div>
 
 
