handle id for get detail

--- a/Event/Event-page/index.html
+++ b/Event/Event-page/index.html
@@ -23,9 +23,9 @@
     <nav class="navbar">
       <a href="#home" class="navbar-logo">OWLEARN</a>
       <div class="navbar-nav">
-        <a href="#home">HOME</a>
-        <a href="#learning">LEARNING</a>
-        <a href="#event">EVENT</a>
+        <a href="/index.html">HOME</a>
+        <a href="/learning.html">LEARNING</a>
+        <a href="./index.html">EVENT</a>
         <a href="#about">ABOUT US</a>
       </div>
       <div class="navbar-extra">
@@ -45,11 +45,11 @@
 
     <div class="event">
         <h2>Sertifikasi</h2>
-        <div class="sertifikasi">
-            <a href="../Informasi-event-page/#sertifikasi1"><img src="foto/sertifikasi1.png" alt="sertifikasi1" id="sertifikasi1"/></a>
-            <a href="../Informasi-event-page/#sertifikasi1"><img src="foto/sertifikasi2.png" alt="sertifikasi2" id="sertifikasi2"/></a>
+        <div id="container-sertifikasi" class="sertifikasi">
+            <!-- <a href="../Informasi-event-page/#sertifikasi1"><img src="foto/sertifikasi1.png" alt="sertifikasi1" id="sertifikasi1"/></a>
+            {<a href="../Informasi-event-page/#sertifikasi1"><img src="foto/sertifikasi2.png" alt="sertifikasi2" id="sertifikasi2"/></a>}
             <a href="../Informasi-event-page/#sertifikasi1"><img src="foto/sertifikasi3.png" alt="sertifikasi3" id="sertifikasi3"/></a>
-            <a href="../Informasi-event-page/#sertifikasi1"><img src="foto/sertifikasi4.png" alt="sertifikasi4" id="sertifikasi4"/></a>
+            <a href="../Informasi-event-page/#sertifikasi1"><img src="foto/sertifikasi4.png" alt="sertifikasi4" id="sertifikasi4"/></a> -->
         </div>
         <!-- <h2>Webinar</h2>
         <div class="webinar">
