--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="navbar-nav">
         <a href="index.html">HOME</a>
         <a href="learning.html">LEARNING</a>
-        <a href="#event">EVENT</a>
+        <a href="./Event/Event-page/index.html">EVENT</a>
         <a href="#about">ABOUT US</a>
       </div>
       <div class="navbar-extra">
