--- a/learning.html
+++ b/learning.html
@@ -25,7 +25,7 @@
       <div class="navbar-nav">
         <a href="index.html">HOME</a>
         <a href="learning.html">LEARNING</a>
-        <a href="#event">EVENT</a>
+        <a href="./Event/Event-page/index.html">EVENT</a>
         <a href="index.html#about">ABOUT US</a>
       </div>
       <div class="navbar-extra">
