--- a/learning.html
+++ b/learning.html
@@ -25,7 +25,7 @@
       <div class="navbar-nav">
         <a href="index.html">HOME</a>
         <a href="learning.html">LEARNING</a>
-        <a href="#event">EVENT</a>
+        <a href="./Event/Event-page/index.html">EVENT</a>
         <a href="index.html#about">ABOUT US</a>
       </div>
       <div class="navbar-extra">
@@ -35,29 +35,6 @@
         <a href="#" aria-label="cart" id="cart"
           ><i class="cart" data-feather="shopping-cart"></i
         ></a>
-        <!-- <div class="cart-box">
-          <div class="container">
-            <h2>Keranjang Anda</h2>
-            <div class="cart-wrapper">
-              <div class="cart-item">
-                <img src="https://i.postimg.cc/3xjYnm20/Owl-1.png" alt="" />
-                <div class="details">
-                  <h3>nama mapel</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet.
-                    <span class="price">Rp.10.000</span>
-                  </p>
-                </div>
-                <div class="cancel">
-                  <i class="cancel" data-feather="x"></i>
-                </div>
-              </div>
-            </div>
-            <div class="subtotal">Harga Total : Rp. 0 0 0 0</div>
-            <div class="checkout">Bayar</div>
-            <div class="view-cart">Lihat Keranjang</div>
-          </div>
-        </div> -->
         <a href="#" aria-label="profile" id="profile"
           ><i class="profile" data-feather="user"></i
         ></a>
@@ -67,7 +44,7 @@
       </div>
     </nav>
 
-    <section class="subject">
+    <!-- <section class="subject">
       <div class="posts-collect">
         <h3>Lanjutkan pembelajaran Anda!</h3>
         <div class="posts-main-container">
@@ -88,7 +65,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section class="subjects">
       <div class="container">
