--- a/payment.html
+++ b/payment.html
@@ -15,35 +15,10 @@
     />
 
     <script src="https://unpkg.com/feather-icons"></script>
-
-    <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/style-payment.css" />
   </head>
-  <body>
-    <nav class="navbar">
-      <a href="index.html" class="navbar-logo">OWLEARN</a>
-      <div class="navbar-nav">
-        <a href="index.html">HOME</a>
-        <a href="learning.html">LEARNING</a>
-        <a href="#event">EVENT</a>
-        <a href="index.html#about">ABOUT US</a>
-      </div>
-      <div class="navbar-extra">
-        <a href="#" aria-label="search" id="search"
-          ><i class="search" data-feather="search"></i
-        ></a>
-        <a href="#" aria-label="cart" id="cart"
-          ><i class="cart" data-feather="shopping-cart"></i
-        ></a>
-        <a href="#" aria-label="profile" id="profile"
-          ><i class="profile" data-feather="user"></i
-        ></a>
-        <a href="#" aria-label="menu" id="menu"
-          ><i class="menu" data-feather="menu"></i
-        ></a>
-      </div>
-    </nav>
 
+  <body>
     <div class="wrapper">
       <div class="payment">
         <h2>Transaksi</h2>
@@ -70,6 +45,7 @@
                 type="text"
                 name="expiry-data"
                 class="input"
+                data-mask="00 / 00"
                 placeholder="00 / 00"
               />
               <i class="far fa-calendar-alt"></i>
@@ -86,35 +62,14 @@
             </div>
           </div>
 
-          <div class="btn">Pay</div>
+          <button class="btn" onclick="fun()">Bayar</button>
         </div>
       </div>
     </div>
-    
-    <footer>
-      <footer>
-        <div class="socials">
-          <a href="https://www.instagram.com/abianramzy/" aria-label="instagram"
-            ><i data-feather="instagram"></i
-          ></a>
-          <a href="https://twitter.com/VVijaya_" aria-label="twitter"
-            ><i data-feather="twitter"></i
-          ></a>
-          <a
-            href="https://www.linkedin.com/in/abian-ramzy-wijaya-b04a93181/"
-            aria-label="linkedin"
-            ><i data-feather="linkedin"></i
-          ></a>
-          <a href="https://www.youtube.com/@abianramzyYT" aria-label="youtube"
-            ><i data-feather="youtube"></i
-          ></a>
-        </div>
 
-        <div class="copyright">
-          <p>Copyright @ 2023 All rights reserved</p>
-        </div>
-      </footer>
-    </footer>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
 
     <script>
       feather.replace();
